src/objects/Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementStartDateFixed__c</fullName>
        <label>￥￥_契約開始日転記</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AgreementStartDate__c</fullName>
        <formula>IF(MONTH( CloseDate__c ) = 12
  , DATE(YEAR(CloseDate__c )+1, 1, 1)
  , DATE(YEAR(CloseDate__c ), MONTH(CloseDate__c )+1, 1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>属性</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>OpportunityAttribute</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>完了予定日</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosingDateCalculation__c</fullName>
        <formula>IF (
 TEXT(Account__r.Payment__c) = &apos;co&apos;  ,
 0 ,
 IF (
 TEXT(Account__r.Payment__c) = &apos;1m&apos;  ,
 1,
 IF (
 TEXT(Account__r.Payment__c) = &apos;2m&apos;  ,
 2,
 IF (
 TEXT(Account__r.Payment__c) = &apos;ot&apos;  ,
 null,
 null
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>￥￥_締日算出</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>請求入金監視</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentDueDateFixed__c</fullName>
        <label>￥￥_支払期日転記</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PaymentDueDate__c</fullName>
        <formula>IF(
 MONTH ( AgreementStartDateFixed__c  ) + ClosingDateCalculation__c &lt;= 11, 

Date(
 YEAR ( AgreementStartDateFixed__c  ),
 MONTH ( AgreementStartDateFixed__c  ) + ClosingDateCalculation__c + 1 ,
 1
 ) -1, 

Date(
 YEAR ( AgreementStartDateFixed__c  ) + 1,
 MONTH ( AgreementStartDateFixed__c  ) + ClosingDateCalculation__c -11,
 1
 ) -1

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支払期日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectCode__c</fullName>
        <displayFormat>XX-{0000}YY-ZZ</displayFormat>
        <label>プロジェクトコード</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Prorating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggerでレコード更新時の処理起動の判定に使用。</description>
        <inlineHelpText>チェックONで、経過収益を作成。
チェックOFFで、経過収益を削除。</inlineHelpText>
        <label>按分実行</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当営業</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunitys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>商談</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ProjectCode__c</columns>
        <columns>Prorating__c</columns>
        <columns>Monitoring__c</columns>
        <columns>CloseDate__c</columns>
        <columns>AgreementStartDate__c</columns>
        <columns>PaymentDueDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>商談-{0000}</displayFormat>
        <label>商談名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>